--- a/index.html
+++ b/index.html
@@ -6,10 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John |Home</title>
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/normolize.css" />
 </head>
 
 <body>
-    /*header*/
+    <!--HEADER-->
+    <header class="header">
+        <div class="header-container container">
+            <!--NAVBAR-->
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#">Works</a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#">Blog</a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!--MAIN-->
+    <main class="main">
+        <div class="container main-container">
+            <div class="main-info">
+                <h1>
+                    Hi, I am John,<br /> Creative Technologist
+                </h1>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button>DOWNLOAD RESUME</button>
+            </div>
+            <div class="main-img">
+                <img src="./images/user.png" alt="" width="243px" height="243px" />
+            </div>
+        </div>
+    </main>
+    <!--RECENT POSTS-->
+    <main class="resent-main"></main>
+    <div class="resent-header">
+        <h4>Recent posts</h4>
+        <a href="#">View all</a>
+    </div>
+    <div class="resent-main">
+        <div class="resent-block">
+            <h3>Creating pixel perfect icons in Figma</h3>
+            <div class="date-profession">
+                <span>12 Feb 2020</span><span>Figma,Icon Design </span>
+            </div>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </div>
+        <div class="resent-block">
+            <h3>Creating pixel perfect icons in Figma</h3>
+            <div class="date-profession">
+                <span>12 Feb 2020</span><span>Figma,Icon Design </span>
+            </div>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </div>
+    </div>
+
+    <!--FEATURES-->
+    <div class=""></div>
+    <!--FOOTER-->
 </body>
 
 </html>
