--- a/index.html
+++ b/index.html
@@ -47,31 +47,36 @@
         </div>
     </main>
     <!--RECENT POSTS-->
-    <main class="resent-main"></main>
-    <div class="resent-header">
-        <h4>Recent posts</h4>
-        <a href="#">View all</a>
-    </div>
-    <div class="resent-main">
-        <div class="resent-block">
-            <h3>Creating pixel perfect icons in Figma</h3>
-            <div class="date-profession">
-                <span>12 Feb 2020</span><span>Figma,Icon Design </span>
+    <main class="resent-main">
+        <div class="container">
+            <div class="resent-header">
+                <h4>Recent posts</h4>
+                <a href="#">View all</a>
             </div>
-            <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </div>
-        <div class="resent-block">
-            <h3>Creating pixel perfect icons in Figma</h3>
-            <div class="date-profession">
-                <span>12 Feb 2020</span><span>Figma,Icon Design </span>
+            <div class="resent-main1">
+                <div class="resent-block">
+                    <h3>Creating pixel perfect icons in Figma</h3>
+                    <div class="date-profession">
+                        <span class="date">12 Feb 2020</span
+              ><span class="profession">Figma,Icon Design </span>
+                    </div>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
+                <div class="resent-block">
+                    <h3>Creating pixel perfect icons in Figma</h3>
+                    <div class="date-profession">
+                        <span class="date">12 Feb 2020</span
+              ><span class="profession"> Figma,Icon Design </span>
+                    </div>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </div>
             </div>
-            <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
         </div>
-    </div>
+    </main>
 
     <!--FEATURES-->
     <div class=""></div>
