--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 <p>
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                 </p>
-                <button>DOWNLOAD RESUME</button>
+                <a href="#">DOWNLOAD RESUME</a>
             </div>
             <div class="main-img">
-                <img src="./images/user.png" alt="" width="243px" height="243px" />
+                <a href="#">
+                    <img src="./images/user.png" alt="" width="243px" height="243px" /></a>
             </div>
         </div>
     </main>
@@ -79,7 +80,58 @@
     </main>
 
     <!--FEATURES-->
-    <div class=""></div>
+
+    <div class="container">
+        <h4>Feature works</h4>
+        <div class="dashboards">
+            <div class="dashboards-img">
+                <img src="./images/Rectangle30.png" alt="John" />
+            </div>
+
+            <div class="dashboard-info">
+                <h3>Designing Dashboards</h3>
+                <div class="dashboards-span">
+                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                </div>
+
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+        <div class="dashboards">
+            <div class="dashboards-img">
+                <img src="./images/Rectangle32.png" alt="John" />
+            </div>
+
+            <div class="dashboard-info">
+                <h3>Designing Dashboards</h3>
+                <div class="dashboards-span">
+                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                </div>
+
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+        <div class="dashboards">
+            <div class="dashboards-img">
+                <img src="./images/Rectangle34.png" alt="John" />
+            </div>
+
+            <div class="dashboard-info">
+                <h3>Designing Dashboards</h3>
+                <div class="dashboards-span">
+                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                </div>
+
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+    </div>
     <!--FOOTER-->
 </body>
 
