--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!--FEATURES-->
 
-    <div class="container">
+    <div class="container container-features">
         <h4>Feature works</h4>
         <div class="dashboards">
             <div class="dashboards-img">
@@ -91,7 +91,8 @@
             <div class="dashboard-info">
                 <h3>Designing Dashboards</h3>
                 <div class="dashboards-span">
-                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                    <span class="dashboard-year">2020</span
+            ><span><a class="dashboard-gray" href="#">Dashboards</a></span>
                 </div>
 
                 <p>
@@ -107,7 +108,8 @@
             <div class="dashboard-info">
                 <h3>Designing Dashboards</h3>
                 <div class="dashboards-span">
-                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                    <span class="dashboard-year">2020</span
+            ><span><a class="dashboard-gray" href="#">Illustration</a></span>
                 </div>
 
                 <p>
@@ -123,7 +125,8 @@
             <div class="dashboard-info">
                 <h3>Designing Dashboards</h3>
                 <div class="dashboards-span">
-                    <span>2020</span><span><a href="#">Dashboards</a></span>
+                    <span class="dashboard-year">2020</span
+            ><span><a class="dashboard-gray" href="#">Typography</a></span>
                 </div>
 
                 <p>
@@ -133,6 +136,12 @@
         </div>
     </div>
     <!--FOOTER-->
+    <div class="container container-footer">
+        <div class="logo">
+            <img src="./images/fb.png" alt="" /><img src="./images/insta.svg" alt="" /><img src="./images/Group.svg" alt="" /><img src="./images/Linkedin.png" alt="" />
+        </div>
+        <p>Copyright ©2020 All rights reserved</p>
+    </div>
 </body>
 
 </html>
