--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <header class="header">
         <div class="header-container container">
             <!--NAVBAR-->
+            <input type="checkbox" name="" id="nav-hide-show" />
+
             <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
@@ -27,6 +29,8 @@
                     </li>
                 </ul>
             </nav>
+            <label for="nav-hide-show" class="nav-bar"><img src="./images/menu.svg" alt=""
+        /></label>
         </div>
     </header>
     <!--MAIN-->
@@ -49,7 +53,7 @@
     </main>
     <!--RECENT POSTS-->
     <main class="resent-main">
-        <div class="container">
+        <div class="container resent-container">
             <div class="resent-header">
                 <h4>Recent posts</h4>
                 <a href="#">View all</a>
